<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background">


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="120dp"
        android:overScrollMode="never"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="77dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/utoimage_otf"
                    android:text="어떤 감정"
                    android:textColor="@color/pointColor"
                    android:textSize="24sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/utoimage_otf"
                    android:text="을 느끼셨나요?"
                    android:layout_marginStart="2dp"
                    android:textColor="@color/subColor1"
                    android:textSize="24sp" />

            </LinearLayout>


            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:fontFamily="@font/suit_light"
                android:text="그 감정을 담은 아름다운 이름이 될 거예요 :)"
                android:textColor="@color/subColor"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView1" />

            <ImageView
                android:id="@+id/selectEmotion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:src="@drawable/emotion7"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView2" />


            <LinearLayout
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/selectEmotion">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/utoimage_otf"
                    android:text="좋았던 점"
                    android:textColor="@color/pointColor"
                    android:textSize="24sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/utoimage_otf"
                    android:text="이 무엇이었나요?"
                    android:layout_marginStart="2dp"
                    android:textColor="@color/subColor1"
                    android:textSize="24sp" />
            </LinearLayout>


            <nl.bryanderidder.themedtogglebuttongroup.ThemedToggleButtonGroup
                android:id="@+id/ThemedToggleButtonGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:flexWrap="wrap"
                app:justifyContent="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView3"
                app:toggle_selectAnimation="fade"
                app:toggle_selectableAmount="2"> <!-- this attribute is from the underlying FlexboxLayout -->

                <nl.bryanderidder.themedtogglebuttongroup.ThemedButton
                    android:id="@+id/btn1"
                    android:layout_width="wrap_content"
                    android:layout_height="38dp"
                    android:layout_margin="8dp"
                    app:toggle_selectedBackgroundColor="@color/pointColor"
                    app:toggle_text="@string/emotion0" />

                <nl.bryanderidder.themedtogglebuttongroup.ThemedButton
                    android:id="@+id/btn2"
                    android:layout_width="wrap_content"
                    android:layout_height="38dp"
                    android:layout_margin="8dp"
                    app:toggle_selectedBackgroundColor="@color/pointColor"
                    app:toggle_text="@string/emotion1" />

                <nl.bryanderidder.themedtogglebuttongroup.ThemedButton
                    android:id="@+id/btn3"
                    android:layout_width="wrap_content"
                    android:layout_height="38dp"
                    android:layout_margin="8dp"
                    app:toggle_selectedBackgroundColor="@color/pointColor"
                    app:toggle_text="@string/emotion2" />

                <nl.bryanderidder.themedtogglebuttongroup.ThemedButton
                    android:id="@+id/btn4"
                    android:layout_width="wrap_content"
                    android:layout_height="38dp"
                    android:layout_margin="8dp"
                    app:toggle_selectedBackgroundColor="@color/pointColor"
                    app:toggle_text="@string/emotion3" />

                <nl.bryanderidder.themedtogglebuttongroup.ThemedButton
                    android:id="@+id/btn5"
                    android:layout_width="wrap_content"
                    android:layout_height="38dp"
                    android:layout_margin="8dp"
                    app:toggle_selectedBackgroundColor="@color/pointColor"
                    app:toggle_text="@string/emotion4" />

                <nl.bryanderidder.themedtogglebuttongroup.ThemedButton
                    android:id="@+id/btn6"
                    android:layout_width="wrap_content"
                    android:layout_height="38dp"
                    android:layout_margin="8dp"
                    app:toggle_selectedBackgroundColor="@color/pointColor"
                    app:toggle_text="@string/emotion5" />

                <nl.bryanderidder.themedtogglebuttongroup.ThemedButton
                    android:id="@+id/btn7"
                    android:layout_width="wrap_content"
                    android:layout_height="38dp"
                    android:layout_margin="8dp"
                    app:toggle_selectedBackgroundColor="@color/pointColor"
                    app:toggle_text="@string/emotion6" />

                <nl.bryanderidder.themedtogglebuttongroup.ThemedButton
                    android:id="@+id/btn8"
                    android:layout_width="wrap_content"
                    android:layout_height="38dp"
                    android:layout_margin="8dp"
                    app:toggle_selectedBackgroundColor="@color/pointColor"
                    app:toggle_text="@string/emotion7" />

            </nl.bryanderidder.themedtogglebuttongroup.ThemedToggleButtonGroup>


            <LinearLayout
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ThemedToggleButtonGroup">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/utoimage_otf"
                    android:text="그 모습"
                    android:textColor="@color/pointColor"
                    android:textSize="24sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/utoimage_otf"
                    android:text="을 담아볼까요?"
                    android:textColor="@color/subColor1"
                    android:textSize="24sp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="0dp"
                android:layout_height="220dp"
                android:layout_marginStart="27dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="27dp"
                android:background="@drawable/square_background_border"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView5" />

            <ImageView
                android:id="@+id/camera"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="18dp"
                android:src="@drawable/ic_baseline_add_a_photo_24"
                app:layout_constraintEnd_toStartOf="@id/gallery"
                app:layout_constraintTop_toTopOf="@id/gallery" />

            <ImageView
                android:id="@+id/gallery"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:src="@drawable/ic_baseline_add_photo_alternate_24"
                app:layout_constraintEnd_toEndOf="@id/imageView"
                app:layout_constraintTop_toTopOf="@id/imageView" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


    <Button
        android:id="@+id/check"
        android:layout_width="320dp"
        android:layout_height="52dp"
        android:layout_marginBottom="30dp"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:text="리뷰 등록하기"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>