<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background">


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="gone"
        android:overScrollMode="never"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="77dp"
                android:fontFamily="@font/utoimage_otf"
                android:text="헤바래기는 행복하우다."
                android:textColor="@color/orange"
                android:textSize="26sp"/>


            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:fontFamily="@font/suit_light"
                android:text="해바라기는 행복해요."
                android:textColor="@color/subColor"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView1" />

            <ImageView
                android:id="@+id/selectEmotion"
                android:layout_width="105dp"
                android:layout_height="100dp"
                android:layout_marginTop="35dp"
                android:src="@drawable/emotion2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView2" />


            <LinearLayout
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/utoimage_otf"
                    android:text="좋았던 점"
                    android:textColor="@color/subColor1"
                    android:textSize="24sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:fontFamily="@font/utoimage_otf"
                    android:text="BEST"
                    android:textColor="@color/orange"
                    android:textSize="24sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/ThemedToggleButtonGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/marker_info_border_orange"
                android:fontFamily="@font/suit_light"
                android:padding="12dp"
                android:text="@string/emotion3"
                android:textColor="@color/subColor1"
                android:textSize="14sp" />


            <LinearLayout
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/utoimage_otf"
                    android:text="난 이런 점이 "
                    android:textColor="@color/subColor1"
                    android:textSize="24sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/utoimage_otf"
                    android:text="가장 좋았어요!"
                    android:textColor="@color/pointColor"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/myInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/like1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/marker_info_border_point_color"
                    android:padding="12dp"
                    android:text="@string/emotion1" />

                <TextView
                    android:id="@+id/like2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/marker_info_border_point_color"
                    android:padding="12dp"
                    android:text="@string/emotion6" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="내가 "
                    android:fontFamily="@font/utoimage_otf"
                    android:textColor="@color/subColor1"
                    android:textSize="24sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="담은 모습"
                    android:fontFamily="@font/utoimage_otf"
                    android:textColor="@color/pointColor"
                    android:textSize="24sp" />

            </LinearLayout>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:layout_marginStart="27dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="27dp"
                android:layout_marginBottom="80dp"
                android:background="@drawable/square_background_border"
                android:scaleType="centerCrop" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>